# langchain-tutorials

./: README.md
.serena/: project.yml
.trae/documents/: 实现 TS 版 app_1 示例脚本.md
langchain_py/: .env.example  README.md  main.py  pyproject.toml
langchain_py/.serena/: project.yml
langchain_py/.trae/rules/: project_rule.md
langchain_py/app/: agent.py  checkpointer.py  config.py  lcel.py  tool_calling.py
langchain_py/app/1/: invocation.py  lcel.py  models.py  quickstart.py
langchain_py/app/2/: structure_output.py  tool_calling.py
langchain_py/app/3/: short_memory.py
langchain_py/app/4/: embedding.py  loader.py
langchain_py/app/4/files/: keyboard_guide.csv  keyboard_guide.json  keyboard_guide.md  keyboard_guide.txt
langchain_ts/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
langchain_ts/.trae/rules/: project_rule.md
langchain_ts/app/: config.ts
langchain_ts/app/1/: invocation.ts  lcel.ts  models.ts  quickstart.ts
langchain_ts/app/2/: structure_output.ts  tool_calling.ts
